# saturn

./: Cargo.toml  README.md
saturn_gui/: Cargo.toml  build.rs
saturn_gui/src/: application.rs  main.rs
saturn_gui/src/widget/: rich_text.rs
strelka-gui/: Cargo.toml
strelka-gui/src/: application.rs  main.rs  rich_text.rs
strelka-gui/src/widget/: mod.rs  rich_text.rs
