[package]
name = "saturn_gui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "saturn"
path = "src/main.rs"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
features = ["canvas", "advanced", "image"]

[dependencies.cosmic-text]
git = "https://github.com/pop-os/cosmic-text.git"
rev = "a07a6190548c8e40a55f6b7761387047ff1bf6ff"

[dependencies.anyhow]
workspace = true

[dependencies.tracing]
workspace = true

[build-dependencies.winresource]
version = "0.1"
